--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 <html>
-Hi there
-Fragma Chatbot Page
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <title>Main Page</title>
+    <style>
+    	#left{
+			float:left;
+			width:75%;
+			overflow:hidden;
+		}
+		#right{
+			float:left;
+			padding-top: 33%;
+			width:25%;
+			overflow:hidden;
+		}
+    </style>
+</head>
+<body>
+	<div id="wrapper">
+		<div id="left">
+			<img src="images/mainimage.jpg" style="width:100%;height:100%;"></img>
+		</div>
+		<div id="right">
+			<a href="landingpage.html">
+		  		<img src="images/mashreqbanner.jpg" style="width:100%;height:30%;">
+			</a>
+		</div>
+	</div>
+</body>
 </html>
