--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		}
 		#right{
 			float:left;
-			padding-top: 33%;
 			width:25%;
 			overflow:hidden;
 		}
@@ -23,9 +22,17 @@
 			<img src="images/mainimage.jpg" style="width:100%;height:100%;"></img>
 		</div>
 		<div id="right">
-			<a href="landingpage.html">
-		  		<img src="images/mashreqbanner.jpg" style="width:100%;height:30%;">
-			</a>
+			<div style="padding-top: 25%">
+				<h1 style="font-family:Century Gothic; text-align: center">Welcome to Mashreq Assit</h1>
+			<div>
+			<div style="padding-top: 10%">
+				<h3 style="font-family:Century Gothic; text-align: center">Click on the below image to get QR code of chatbot</h3>
+			</div>
+			<div style="padding-top: 35%">
+				<a href="landingpage.html">
+			  		<img src="images/mashreqbanner.jpg" style="width:100%;height:30%;">
+				</a>
+			</div>
 		</div>
 	</div>
 </body>
