Created Index and LandingPage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div id="wrapper">
 		<div id="left">
-			<img src="./images/mainimage.jpg" style="width:100%;height:100%;"></img>
+			<img src="images/mainimage.JPG" style="width:100%;height:100%;"></img>
 		</div>
 		<div id="right">
 			<div style="padding-top: 25%">
@@ -30,7 +30,7 @@
 			</div>
 			<div style="padding-top: 35%">
 				<a href="landingpage.html">
-			  		<img src="./images/mashreqbanner.jpg" style="width:100%;height:30%;">
+			  		<img src="images/mashreqbanner.jpg" style="width:100%;height:30%;">
 				</a>
 			</div>
 		</div>
