--- a/make.html
+++ b/make.html
@@ -1,5 +1,5 @@
 <!-- #######  THIS IS A COMMENT - Visible only in the source editor #########-->
 <h1 style="text-align: center;"><span style="color: #000080;"><strong>Booking.com</strong></span></h1>
-<p><img src="https://sachin-fragma.github.io/images/mashreq-hr-banner.png" width="1058" height="137" /></p>
+<p><a title="Mashreq Chatbot" href="https://sachin-fragma.github.io/landingpage.html"><img src="https://sachin-fragma.github.io/images/mashreq-hr-banner.png" width="1058" height="137" /></a></p>
 <p><img src="https://sachin-fragma.github.io/images/mainimage.JPG" /></p>
 <p>&nbsp;</p>
