--- a/index.html
+++ b/index.html
@@ -2,38 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <title>Main Page</title>
-    <style>
-    	#left{
-			float:left;
-			width:75%;
-			overflow:hidden;
-		}
-		#right{
-			float:left;
-			width:25%;
-			overflow:hidden;
-		}
-    </style>
+    <title>Mashreq Chatbot</title>
 </head>
 <body>
-	<div id="wrapper">
-		<div id="left">
-			<img src="images/mainimage.JPG" style="width:100%;height:100%;"></img>
-		</div>
-		<div id="right">
-			<div style="padding-top: 25%">
-				<h1 style="font-family:Century Gothic; text-align: center">Welcome to Mashreq Assit</h1>
-			<div>
-			<div style="padding-top: 10%">
-				<h3 style="font-family:Century Gothic; text-align: center">Click on the below image to get QR code of chatbot</h3>
-			</div>
-			<div style="padding-top: 35%">
-				<a href="landingpage.html">
-			  		<img src="images/mashreqbanner.jpg" style="width:100%;height:30%;">
-				</a>
-			</div>
-		</div>
-	</div>
+	<h1 style="font-family:Century Gothic; text-align: center;"><span style="color: #000080;"><strong>Booking.com</strong></span></h1>
+	<a href="landingpage.html">
+  		<img src="images/mashreqadbanner.png" style="width:100%;height:30%;">
+	</a>
+	<img src="images/mainimage2.JPG" style="width:100%;height:100%;"></img>
 </body>
 </html>
