--- a/make.html
+++ b/make.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html> 
 <html> 
     <head> 
-        <title>CSS center property</title> 
+        <title>Booking.com</title> 
         <style> 
             body { 
                 text-align:center; 
