Changed banner location

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
 	<h1 style="font-family:Century Gothic; text-align: center;"><span style="color: #000080;"><strong>Booking.com</strong></span></h1>
 	<a href="landingpage.html">
-  		<img src="images/mashreqadbanner.png" style="width:100%;height:30%;">
+  		<img src="images/mashreqadbanner.png" width="1335" height="150">
 	</a>
-	<img src="images/mainimage2.JPG" style="width:100%;height:100%;"></img>
+	<img src="images/mainimage2.JPG"></img>
 </body>
 </html>
