Changed banner location

--- a/landingpage.html
+++ b/landingpage.html
@@ -30,7 +30,7 @@
                 <div class="card-heading"></div>
                 <div class="card-body">
                     <h3 class="title">Scan the Qr to Connect with us on whatsapp</h3>
-                    <img src="images/QR-Code.png" width="250"></img>
+                    <img src="images/qrcode2.png" width="250"></img>
                    
                 </div>
             </div>
