--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <title>Mashreq Chatbot</title>
 </head>
 <body>
-	<h1 style="font-family:Century Gothic; text-align: center;"><span style="color: #000080;"><strong>Booking.com</strong></span></h1>
+	<img src="images/image1.JPG" width="1335" height="400"></img>
 	<a href="landingpage.html">
   		<img src="images/mashreqadbanner.png" width="1335" height="150">
 	</a>
-	<img src="images/mainimage2.JPG"></img>
+	<img src="images/image2.JPG" width="1335" height="400"></img>
 </body>
 </html>
