Changed banner location

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
 <head>
     <title>Mashreq Chatbot</title>
+    <style>
+    	body{
+        margin: 0px;
+        padding: 0px;
+    }
+    </style>
 </head>
 <body>
-	<img src="images/image1.JPG" width="1335" height="400"></img>
+	<img src="images/image1.JPG"></img>
 	<a href="landingpage.html">
-  		<img src="images/mashreqadbanner.png" width="1335" height="150">
+  		<img src="images/mashreqadbanner.png" width="1335">
 	</a>
-	<img src="images/image2.JPG" width="1335" height="400"></img>
+	<img src="images/image2.JPG"></img>
 </body>
 </html>
