--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </style>
 </head>
 <body>
-	<img src="images/image1.JPG"></img>
+	<img src="images/mytrip1.JPG"></img>
 	<a href="landingpage.html">
   		<img src="images/mashreqadbanner.png" width="1335">
 	</a>
-	<img src="images/image2.JPG"></img>
+	<img src="images/mytrip2.JPG"></img>
 </body>
 </html>
