Added new images

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 	<img src="images/mytrip1.JPG"></img>
 	<a href="landingpage.html">
-  		<img src="images/mashreqadbanner.png" width="1335">
+  		<img src="images/mashreqadbanner.png" width="1345">
 	</a>
-	<img src="images/mytrip2.JPG"></img>
+	<img src="images/image2.JPG"></img>
 </body>
 </html>
