--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </style>
 </head>
 <body>
-	<img src="images/mytrip1.JPG"></img>
+	<img src="images/image1.JPG" width="1350"></img>
 	<a href="landingpage.html">
-  		<img src="images/mashreqadbanner.png" width="1345">
+  		<img src="images/mashreqadbanner.png" width="1350">
 	</a>
-	<img src="images/image2.JPG"></img>
+	<img src="images/image2.JPG" width="1350"></img>
 </body>
 </html>
